dxscale/sales/main/objects/Activity/fields/Created_By_Role__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Role__c</fullName>
    <description>Created By Role of the user created the task or event</description>
    <label>Created By Role</label>
    <length>250</length>
    <type>Text</type>
</CustomField>