dxscale/sales/main/objects/Activity/fields/DueDateTime__c.field-meta.xml
<CustomField>
    <fullName>DueDateTime__c</fullName>
    <description>Used in CCore Flows</description>
    <label>Due Date Time</label>
    <type>DateTime</type>
</CustomField>