dxscale/sales/main/objects/Activity/fields/Reminder__c.field-meta.xml
<CustomField>
    <fullName>Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by  CCore in Flows</description>
    <label>Reminder</label>
    <type>Checkbox</type>
</CustomField>