dxscale/sales/main/objects/Activity/fields/Task_Comments__c.field-meta.xml
<CustomField>
    <fullName>Task_Comments__c</fullName>
    <description>Created for CCORE-1996 (255 characters from the &quot;comments&quot; field on the Task is copied into this fields for list views)</description>
    <label>Task Comments</label>
    <type>TextArea</type>
</CustomField>