dxscale/sales/main/objects/Activity/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>This field is created as a part of EAD-2235, because Activity Type was not available in reporting</description>
    <label>Type 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>